--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,6 +1,4 @@
-<!--<h1>Genres#edit</h1>-->
-<!--<p>Find me in app/views/genres/edit.html.erb</p>-->
-
+<!--管理者限定ページ-->
 <h4><class="font-weight-normal">ジャンル編集</h4>
 
 <%= form_with model: @genre , url: admin_genre_path(@genre)  do |f| %>
