--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,9 +1,8 @@
-<!--<h1>Genres#index</h1>-->
-<!--<p>Find me in app/views/genres/index.html.erb</p>-->
+<!--管理者限定ページ-->
 
 <h4><class="font-weight-normal">ブランド一覧・追加</h4>
 
-<%= form_with model: @genre , url: genres_path  do |f| %>
+<%= form_with model: @genre , url: admin_genres_path  do |f| %>
 
  <div class="field">
     <%= f.label :name,"ブランド名" %>
@@ -20,7 +19,7 @@
       <thead>
        <tr>
         <th></th>
-        <th>ジャンル</th>
+        <th>ブランド名</th>
         <th colspan="2"></th>
        </tr>
       </thead>
