--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,2 +1,48 @@
-<h1>User::Homes#top</h1>
-<p>Find me in app/views/user/homes/top.html.erb</p>
+<!--販売スタッフ用トップページ-->
+
+<h1>LINEショップ</h1>
+
+ <h3>店舗コード</h3>
+
+
+  <div class=container px-5 px-sm-0>
+   <div class="row" >
+
+     <table class="table table-hover table-inverse">
+      <thead>
+       <!--<tr>-->
+        <th>ショップ</th>
+        　 <th>販売登録キー</th><th>実行</th>
+
+        <th>問合せ</th>
+        　 <th>顧客新規登録</th><th>実行</th>
+          <th>顧客一覧</th><th>実行</th>
+          
+
+
+
+        <th>商品管理</th>
+          <th>商品新規登録</th><th>実行</th>
+          <th>商品詳細</th><th>実行</th>
+          <th>商品編集</th><th>実行</th>
+
+
+        <th>販売管理</th>
+          <th>ブランド一覧・追加</th><th>実行</th>
+          <th>ブランド編集</th><th>実行</th>
+
+
+
+
+        <!--<th colspan="3"></th>-->
+       </tr>
+      </thead>
+
+      <tbody></tbody>
+    </table>
+
+ </div>
+</div>
+
+
+<%= button_to 'sign_out', user_destroy_sessions_path, method: :delete %>
