--- a/app/views/user/items/index.html.erb
+++ b/app/views/user/items/index.html.erb
@@ -1,2 +1,24 @@
-<h1>User::Items#index</h1>
-<p>Find me in app/views/user/items/index.html.erb</p>
+<h1>商品一覧画面</h1>
+
+
+<div class="container">
+<h2><class="font-weight-normal">商品一覧</h2>
+ <div class="row">
+  <% @items.each do |item| %>
+   <div class="col-3">
+    <%= link_to item_path(item.id) do %>
+    <%= image_tag item.get_image(100,100), class:"card-img-top"; %>
+    <p><%= link_to item.name,item_path(item.id) %></p>
+    <% end %>
+    ¥<%= item.price %>
+
+   </div>
+  <% end %>
+  <%= paginate @items %>
+ </div>
+</div>
+
+
+
+
+
