--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -2,7 +2,7 @@
 
 <h2>商品編集</h2>
 
-<%= form_with model: @item , url: admin_items_path  do |f| %>
+<%= form_with model: @item , url: admin_item_path(@item) do |f| %>
 
   <div class="field">
    <%= f.label :商品画像 %>
