--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,34 +1,1 @@
-<h1>商品詳細画面</h1>
-<p>Find me in app/views/items/show.html.erb</p>
-
-<!--顧客商品詳細-->
- <%= image_tag @item.get_image(200,200) %>
-
-<p><%= @item.name %></p>
- <p><%= @item.introduction %></p>
-  ¥<%= @item.price %>(税込)
-
-<%= form_with model: @cart_item , url: cart_items_path  do |f| %>
-
- <p><%= f.select :amount, [1,2,3 ]%></p>
- <%= f.hidden_field :item_id, :value => @item.id %>
-<%= f.submit "カートに入れる",class:"btn btn-Success" %>
-
-<% end %>
-
-<h2>商品詳細</h2>
-
-<%= image_tag @item.get_image(200,200) %>
- <p>商品名</p><%= @item.name %>
-  <p>商品説明</p><%= @item.introduction %>
-   <p>ジャンル</p><%= @item.genre.name %>
-    <p>税込価格（税抜価格）</p><%= @item.add_tax_price %>円
-     <p>販売ステータス</p>
-     
-<% if @item.is_active == true %>
-<p>販売中</p>
-<% else %>
- 販売停止中
-<% end %>
-
-<%=link_to "編集する",edit_admin_item_path(@item), class: "btn btn-success"%>
+<%= render '/common/items/items_show',items:@items %>
