--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -1,2 +1,1 @@
-<h1>User::Items#show</h1>
-<p>Find me in app/views/user/items/show.html.erb</p>
+<%= render 'common/items/items_show',items:@items %>
