--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,32 +1,1 @@
-<h3><class="font-weight-normal">会員一覧</h3>
-
-  <div class="col-md-8 offset-md-1">
-     <table class="table table-hover table-inverse">
-      <thead>
-       <tr>
-        <th>会員ID</th>
-         <th>氏名</th>
-          <th>電話番号</th>
-           <th>ステータス</th>
-            <th colspan="3"></th>
-       </tr>
-      </thead>
-
-      <tbody>
-       <% @customers.each do |customer| %>
-        <tr>
-         <td><%= customer.id %></td>
-          <td><%= link_to customer.full_name,admin_customer_path(customer.id) %></td>
-           <td><%= customer.telphone_number %></td>
-        <%if customer.is_deleted==false %>
-         <td>有効</td>
-        <% else %>
-         <td>退会</td>
-        <% end %>
-        </tr>
-       <% end %>
-       <%= paginate @customers %>
-
-      </tbody>
-    </table>
-  </div>
+<%= render 'common/customers/customers_index',customers:@customers %>
