--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -25,6 +25,14 @@
       </thead>
 
       <tbody>
+       <% @genres.each do |genre| %>
+        <tr>
+         <td><%= genre.name %></td>
+         <td><%=link_to "編集する",edit_admin_genre_path(genre.id), class: "btn btn-success" %></td>
+
+        </tr>
+
+       <% end %>
 
 
 
