--- a/app/views/user/cart_items/index.html.erb
+++ b/app/views/user/cart_items/index.html.erb
@@ -1,2 +1,1 @@
-<h1>User::CartItems#index</h1>
-<p>Find me in app/views/user/cart_items/index.html.erb</p>
+<%= render '/common/cart_items/cart_items_index',cart_items:@cart_items %>
