--- a/app/views/user/customers/show.html.erb
+++ b/app/views/user/customers/show.html.erb
@@ -1,2 +1,1 @@
-<h1>User::Customers#show</h1>
-<p>Find me in app/views/user/customers/show.html.erb</p>
+<%= render 'common/customers/customers_show',customers:@customers %>
